publish: Update build.gradle.kts

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -4,4 +4,4 @@ main: org.raming.rUtils.RUtils
 api-version: '1.20'
 load: STARTUP
 authors: [ Raaaaming ]
-description: This is Raaaaming's Library Plugin
+description: This is Raaaaming's Minecraft Library Plugin
